--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Poppins&family=Raleway&family=Satisfy&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* font-family: 'Lato', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Raleway', sans-serif; */
+    /* font-family: 'Poppins', sans-serif; */
+    font-size: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+
+/* .main-section {
+    min-height: 80vh;
+    background-color: white;
+    display: flex;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.individual-card {
+    margin: 10px;
+    padding: 15px;
+    width: 200px;
+    height: 200px;
+    border: 2px solid grey;
+    border-radius: 10px;
+
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.macros {
+    display: flex;
+    justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.single-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.single-item-count-section {
+    display: flex;
+    align-items: baseline;
 }
+
+.single-item-count-section>* {
+    margin: 10px;
+}
+
+
+
+.add-button-section {
+    min-width: 100%;
+    min-height: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.add-button-section>button {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    font-size: 30px;
+}
+ */
+
+
+
+/* Testing */
